    - Fix #697: On HiDPI displays, plugin native UI windows are automatically
      scaled by Qt, but most of the native plugin UIs are not scalable 
      or apply their own scaling. There is now a global setting for reverting 
      the Qt window scaling. It can be overridden for each soft synth track
      by a local setting in the Quirks toolbar. (kybos)
28.11.2019
    - Fixed the DidYouKnow menu alternative so it shows the dialog even if the
      checkbox for not displaying it is checked. (rj)
    - Added a few more lines to the DidYouKnow.txt database
    - Snooper improvements, fix crashes, fix 'parented top level' not working right. (Tim)
27.11.2019
    - Unfortunately had to revoke the 'easy fix' below for getting more shortcuts to work
      there were side effects...  The search goes on for the 'real' solution (rj)
    - Snooper improvements. Moved to Help menu. Live realtime monitoring of events. (Tim)
26.11.2019
    * New - Introducing the Snooper (object tree) for coders and stylesheet authors: (Tim)
      Click new Snooper button in Appearance to start. Then click on anything anywhere.
23.11.2019
    - More keyboard shortcuts
      * First of, I found out that several shortcuts never end up in the dispatcher since they (rj)
        were tested against the "accepted" property. Seems this is not reliable nor needed,
        it affected atleast PgUp, PgDn and Return.
      * Arm currently selected track can now be bound: Default Ctrl+Return
      * Goto end of song can be bound: Shift+W
22.11.2019
    - New solution to making bar lines more visible. Basically removed more hardcoded colors
      and made them configurable in the appearance dialog (rj)
    - Fixed escape-key shortcut for closing a few more dialogs/editors:
      master track list/graphical, instrument editor (rj)
    - Advanced router stylesheet support: New property 'RouteTreeWidget::categoryColor'. (Tim)