@@ -48,6 +48,7 @@ MusECore::MTC mtcOffset;
 bool extSyncFlag = false;       // false - MASTER, true - SLAVE
 bool useJackTransport = false;
 bool volatile jackTransportMaster = true;
+bool transportMasterState = false;
 
 static MusECore::MTC mtcCurTime;
 static int mtcState;    // 0-7 next expected quarter message
